[gd_scene load_steps=7 format=3 uid="uid://dm0ye7cy0rr66"]

[ext_resource type="Script" uid="uid://bujtnfyqbii7t" path="res://Escenas/IU/menu.gd" id="1_v3o73"]
[ext_resource type="Texture2D" uid="uid://lm4p6t3xoqtb" path="res://Assets/IU/inicio.png" id="2_un3wq"]
[ext_resource type="Theme" uid="uid://dd3gq4t7cc7pg" path="res://Escenas/IU/menu.tres" id="3_q7f15"]
[ext_resource type="AudioStream" uid="uid://bacidku48fjgm" path="res://Assets/IU/Sonidos/main_menu_theme.mp3" id="4_bjc3g"]
[ext_resource type="AudioStream" uid="uid://non5kawdn3lf" path="res://Assets/IU/Sonidos/selection.mp3" id="5_un3wq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17m5t"]
bg_color = Color(0.243137, 0.309804, 0.54902, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v3o73")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_un3wq")
expand_mode = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -383.0
offset_right = 167.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 0

[node name="Jugar" type="Button" parent="MainMenu"]
layout_mode = 2
theme = ExtResource("3_q7f15")
text = "START"
flat = true
autowrap_mode = 2
icon_alignment = 1

[node name="Creditos" type="Button" parent="MainMenu"]
layout_mode = 2
theme = ExtResource("3_q7f15")
theme_override_styles/normal = SubResource("StyleBoxFlat_17m5t")
text = "CREDITS"
flat = true
autowrap_mode = 2
clip_text = true
icon_alignment = 1

[node name="Salir" type="Button" parent="MainMenu"]
layout_mode = 2
theme = ExtResource("3_q7f15")
text = "QUIT"
flat = true
autowrap_mode = 2
clip_text = true
icon_alignment = 1

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bjc3g")
volume_db = 10.0
autoplay = true

[node name="Creditos" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -342.0
offset_top = -518.0
offset_right = 342.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="Creditos" type="Label" parent="Creditos"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("3_q7f15")
text = "Made with Godot <3
Font: monogram by datagoblin"
horizontal_alignment = 1

[node name="Nombres" type="Label" parent="Creditos"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_q7f15")
text = "Jonathan Danae Flores Franco
Antonio Sebastian Dromundo Escobedo
Diego Dozal Magnani
Coppelia Fernanda Romero Campos
Hugo Giovanni Ramirez Cortes
Alejandro Blancas Peralta
Aquiles Pina Olvera"
horizontal_alignment = 1
uppercase = true

[node name="BackToMenu" type="Button" parent="Creditos"]
layout_mode = 2
theme = ExtResource("3_q7f15")
text = "BACK"

[node name="sfx_selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_un3wq")
volume_db = 5.0
autoplay = true

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="pressed" from="MainMenu/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="MainMenu/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="MainMenu/Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Creditos/BackToMenu" to="." method="_on_back_to_menu_pressed"]
